Prevent demo objects from spilling out of their containers

--- a/pattern-lib/src/app/component-list/component-list.component.css
+++ b/pattern-lib/src/app/component-list/component-list.component.css
@@ -43,5 +43,6 @@
 
   .component-list {
     flex-basis: 100%;
+    width: 100%;
   }
 }
